<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="false"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/fgpwdbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/signupbg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="12dp"
        android:scaleType="center"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="Create \n Account"
        android:textColor="@color/secondary"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <com.google.android.material.card.MaterialCardView
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp">

            <EditText
                android:id="@+id/Username"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondary"
                android:ems="10"
                android:hint="Username"
                android:inputType="text"
                android:textColor="@color/secondary"
                android:padding="8dp"
                android:textColorHint="@color/secondary"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondary"
                android:ems="10"
                android:hint="Email"
                android:inputType="text"
                android:textColor="@color/secondary"
                android:padding="8dp"
                android:textColorHint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondary"
                android:ems="10"
                android:hint="Password"
                android:inputType="text"
                android:textColor="@color/secondary"
                android:padding="8dp"
                android:textColorHint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondary"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/secondary"
                android:padding="8dp"
                android:textColorHint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#FF5722"
                android:text="@string/btnSignUp"
                android:textSize="20sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
                app:layout_constraintVertical_bias="0.251" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/AskToSighUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/AsktoLogin"
                    android:textColor="@color/secondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/link_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/LinkSignIn"
                    android:textColor="@color/action2"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>